# jxl-oxide

./: .gitignore  Cargo.toml
crates/jxl-annotate/: Cargo.toml
crates/jxl-annotate/src/: annotator.rs  diff.rs  inspect.rs  main.rs  output.rs
crates/jxl-bitstream/: Cargo.toml
crates/jxl-bitstream/src/: annotate.rs  lib.rs
crates/jxl-coding/src/: lib.rs
crates/jxl-frame/: Cargo.toml
crates/jxl-frame/src/: lib.rs
crates/jxl-inspect/: Cargo.toml  README.md
crates/jxl-inspect/src/: main.rs
crates/jxl-modular/src/: image.rs  lib.rs  ma.rs
crates/jxl-modular/src/transform/: squeeze.rs
crates/jxl-oxide-common/: Cargo.toml
crates/jxl-oxide-tests/: Cargo.toml
crates/jxl-oxide-tests/tests/: test.rs
crates/jxl-oxide-tests/tests/encoder_regression/: mod.rs  multigroup_vardct_alpha_empty_global.jxl
crates/jxl-oxide/src/integration/: image.rs
crates/jxl-render/src/vardct/x86_64/dct/: mod.rs
