[package]
name = "jxl-bitstream"
description = "JPEG XL bitstream reader, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "1.1.0"
edition = "2024"

[features]
default = []
annotate = ["dep:serde", "dep:whereat"]

[dependencies]
tracing.workspace = true
serde = { workspace = true, optional = true }
whereat = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
