[package]
name = "jxl-inspect"
description = "JXL bitstream inspection and analysis tool for JPEG XL debugging"
authors = ["Lilith River <lilith@imazen.io>"]
repository = "https://github.com/imazen/jxl-inspect"
readme = "README.md"
keywords = ["jpeg-xl", "jxl", "debugging", "analysis", "inspection"]
categories = ["multimedia::images", "development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"

[[bin]]
name = "jxl-inspect"
path = "src/main.rs"

[dependencies]
jxl-bitstream = { path = "../jxl-bitstream", features = ["annotate"] }
jxl-oxide = { path = "../jxl-oxide" }
jxl-image = { path = "../jxl-image" }
jxl-frame = { path = "../jxl-frame", features = ["annotate"] }
jxl-vardct = { path = "../jxl-vardct" }

clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"
hex = "0.4"
